# ampro

./: .gitignore  README.md
ampro/: Cargo.toml
ampro-python/: README.md  ad_retrieval.ipynb  main.py  pyproject.toml
ampro-python/ampro_python/_utils/: drs_utils.py
ampro-python/misc/: Untitled-Copy1.ipynb  ad_retrieval_tutorial.ipynb  json_parsing.ipynb
ampro-python/utils/: aircraft_registration_db.py  drs_ingest.py  drs_utils.py
ampro-rust/src/: config.rs  main.rs  models.rs
ampro/src/: api_calls.rs  config.rs  main.rs  models.rs
resources/: DRS Document Types Metadata Mapping.xlsx
